# AstraRAG

./: .gitignore  README.md  Steps.txt  env_template.txt  pyproject.toml  requirements.txt  requirements_recommended.txt
src/agent_src/: check_crew.py  crew.py
src/agent_src/agents/: question_answer_agent.py
src/agent_src/config/: agent_settings.py
src/agent_src/llm/: get_llm.py
src/agent_src/tasks/: question_answer_task.py
src/agent_src/tools/: rag_qa_tool.py
src/backend_src/: main.py
src/backend_src/api/: chat.py
src/backend_src/config/: backend_settings.py
src/backend_src/services/: chat.py
src/frontend_src/: app.py
src/frontend_src/config/: frontend_settings.py
src/logger_config/: logger_config.py
src/rag_doc_ingestion/: ingest_docs.py
src/rag_doc_ingestion/config/: rag_doc_ingestion_settings.py
