[project]
name = "astrarag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.0.21",
    "crewai==0.186.1",
    "fastapi==0.116.1",
    "llama-index-core==0.14.22",
    "llama-index-embeddings-huggingface==0.6.1",
    "llama-index-llms-groq==0.4.1",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-chroma==0.5.3",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "requests>=2.34.2",
    "streamlit==1.49.1",
    "uvicorn==0.35.0",
]
